# dani-backend

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test_mcp_image.py  test_rewriter.py  test_suite.py
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_add_rag_logs_table.py  003_add_missing_user_columns.py  (+8 more)
app/: main.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: .markdownlint.json  OLLAMA_HYBRID_SETUP.md  lookinto.txt
scripts/: check_infographic_storage.py  check_message_metadata.py  check_qdrant_schema.py  check_schema.py  check_status.py  debug_qdrant.py  diagnose_s3.py  find_infographic_conversations.py  fix_document_types.py  get_auth_token.py  ingest_fireflies.py  init_qdrant.py  inspect_qdrant_metadata.py  list_fireflies_transcripts.py  quality_report.py  reingest_all.py  seed_users.py  test_gemini_exp_image.py  test_gemini_image.py  test_image_generation.py  test_image_methods.py  test_imagen4.py  test_infographic_url.py  test_nano_banana.py  test_ollama_cloud_performance.py  test_retrieval_accuracy.py  test_s3_connection.py  test_user_update.py  validate_ingestion.py  verify_ingestion.py  verify_rag.py
tests/: conftest.py  test_agent_service.py  test_api_deps.py  test_auth.py  test_background_ingestion.py  test_base_repository.py  test_chat.py  test_circuit_breaker.py  test_conversation_memory.py  test_conversation_memory_live.py  test_conversations.py  test_direct_gemini.py  test_doc_type_filter.py  test_document_loaders.py  test_document_repository.py  test_document_routes.py  test_document_service.py  test_email_style_service.py  test_embedding_client.py  test_enhanced_services.py  test_exceptions.py  test_ghostwriter.py  test_health_service.py  test_hybrid_search.py  test_infographic.py  test_infographic_exports.py  test_infographic_integration.py  test_infographic_persistence.py  test_infographic_quality.py  test_infographic_service.py  test_infographic_spec_schema.py  test_ingestion.py  test_mcp.py  test_mcp_connection.py  test_mcp_image.py  test_meeting_category.py  test_memory_quick.py  test_memory_reference.py  test_memory_service.py  test_message_repository.py  (+19 more)
(+112 files in other folders)
